# Trade_Strategy

./: .gitignore  .gsd-manifest.yaml  .mcp.json  AGENTS.md  CLAUDE copy.md  CLAUDE.md  pyproject.toml  参数设置实现总结.txt
.claude/: doc_write_standard.md  settings.json
.claude/agents/: Tom.md  Tommy.md  researcher.md  solution-architect.disable  solution-architect.md  tom.md  ultra_researcher.md
.claude/commands/: update_doc.md
.claude/docs/: system_outline.md
.claude/rules/: UI.md
.github/: copilot-instructions.md
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
BreakoutStrategy/: __init__.py  factor_registry.py  param_loader.py
BreakoutStrategy/UI/: __init__.py  main.py  styles.py  utils.py
BreakoutStrategy/analysis/: __init__.py  breakout_detector.py  breakout_scorer.py  features.py  indicators.py  json_adapter.py  scanner.py  support_analyzer.py
BreakoutStrategy/backtest/: __init__.py  engine.py
BreakthroughStrategy/: __init__.py  config_loader.py
configs/: buy_condition_config.yaml  cascade.yaml  news_sentiment.yaml  scan_config.yaml  ui_config.yaml  user_scan_config.yaml
docs/: README.md
path2/: __init__.py  config.py  core.py  operators.py  pattern.py  runner.py
prompts/: command.md  command.txt  prompts.md  prompts.txt  test_color.py
scripts/: benchmark_samplers.py  create_hover_test_data.py  feature_mining_phase0.py  feature_mining_phase1.py  grow_3times_1month_100_618_618.txt  path2_dogfood_chart.py  test_hover_tooltip.py  test_peak_id_feature.py  test_visualization_peak_id.py
(+807 files in other folders)
