[project]
name = "Trade_Strategy"
version = "0.1.0"
description = "Breakout strategy analysis and observation system"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "pandas-ta>=0.3.14b0",
    "ta-lib>=0.6.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["BreakoutStrategy"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
